tests/error/07_type_not_callable.mire
import std

pub fn main: () {
    set x = not_a_function
}